syntax = "proto3";
package kwil.kwil;

import "gogoproto/gogo.proto";
import "kwil/params.proto";
import "kwil/databases.proto";
import "kwil/ddl.proto";
import "kwil/ddlindex.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "kwil/x/kwil/types";

// GenesisState defines the kwil module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Databases databasesList = 2 [(gogoproto.nullable) = false];
  repeated Ddl ddlList = 3 [(gogoproto.nullable) = false];
  repeated Ddlindex ddlindexList = 4 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
